...
                        mode = OnboardingMode.Login
                        onClearError()
                    },
                    modifier = Modifier.weight(1f),
                )
                OnboardingModeTab(
                    "S'INSCRIRE",
                    selected = mode == OnboardingMode.SignUp,
                    onClick = {
                        mode = OnboardingMode.SignUp
                        onClearError()
                    },
                    modifier = Modifier.weight(1f),
...
